--- a/books/templates/books/index.html
+++ b/books/templates/books/index.html
@@ -1,31 +1,31 @@
-<! =DOCTYPE html>
+<!-- =DOCTYPE html-->
 <html lang="en">
-  <head>
-    <meta charset="UFT-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE-edge" />
-    <meta name="viewport" content="width = device-width,initial-scale=1.0" />
-    <link
-      href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css"
-      rel="stylesheet"
-    />
-    <title>Django Project</title>
-  </head>
-  <body>
-    <section class="py-10">
-      <h1 class="text-center text-3xl">Programing Books App</h1>
-
-      <div class= "grid grid-cols-4 gap-4 mt-10">
-
-        {%for book in books%}
-        
-          <div class ="flex justify center">
-            <img src="{{book.thumbnailUrl}}" width="100" />
-          <div>
-          <p>{{book.id}} - {{book.title}}</p>
-
-        {%endfor%}
-      </div>
-      
-    </section>
-  </body>
+    <head>
+        <meta charset="utf-8"/>
+        <meta content="IE-edge" http-equiv="X-UA-Compatible"/>
+        <meta content="width = device-width,initial-scale=1.0" name="viewport"/>
+        <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet"/>
+        <title>
+            Django Sample Project
+        </title>
+    </head>
+    <body class="bg-gradient-to-r from-gray-200 via-gray-400 to-gray-600">
+        <section class="py-10">
+            <h1 class="text-center text-3xl font-bold ">
+                Programing Books App
+            </h1>
+            <div class="grid grid-cols-4 gap-4 mt-10">
+                {%for book in books%}
+                <a class="justify-self-center text-center my-4" href="{% url 'book.show' book.id%}" target="_blank">
+                    <div class="flex justify-center">
+                        <img src="{{book.thumbnailUrl}}" width="100"/>
+                    </div>
+                    <p>
+                        {{book.title}}
+                    </p>
+                </a>
+                {%endfor%}
+            </div>
+        </section>
+    </body>
 </html>
