--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -2,37 +2,55 @@
 
 {% block content %}
 
-{% if form.errors %}
-<p>Your username and password didn't match. Please try again.</p>
-{% endif %}
+<div class=" flex items-center justify-center  py-12 px-4 sm:px-6 lg:px-8">
+	<div>
+		<div class="rounded bg-white max-w-md rounded overflow-hidden shadow-xl p-5">
+			{% if form.errors %}
+			<p>Your username and password didn't match. Please try again.</p>
+			{% endif %}
 
-{% if next %}
-    {% if user.is_authenticated %}
-    <p>Your account doesn't have access to this page. To proceed,
-    please login with an account that has access.</p>
-    {% else %}
-    <p>Please login to see this page.</p>
-    {% endif %}
-{% endif %}
+			{% if next %}
+			{% if user.is_authenticated %}
+			<p>Your account doesn't have access to this page. To proceed,
+				please login with an account that has access.</p>
+			{% else %}
+			<p>Please login to see this page.</p>
+			{% endif %}
+			{% endif %}
 
-<form method="post" action="{% url 'login' %}">
-{% csrf_token %}
-<table>
-<tr>
-    <td>{{ form.username.label_tag }}</td>
-    <td>{{ form.username }}</td>
-</tr>
-<tr>
-    <td>{{ form.password.label_tag }}</td>
-    <td>{{ form.password }}</td>
-</tr>
-</table>
+			<form class="mt-8 space-y-6" method="post" action="{% url 'login' %}">
+				{% csrf_token %}
 
-<input type="submit" value="login">
-<input type="hidden" name="next" value="{{ next }}">
-</form>
+				<div class="rounded-md shadow-sm -space-y-px">
+					<td>{{ form.username.label_tag }} </td>
+					<td>{{ form.username }}</td>
+				</div>
+				<div>
+					<td>{{ form.password.label_tag }} </td>
+					<td>{{ form.password }}</td>
+				</div>
 
-{# Assumes you setup the password_reset view in your URLconf #}
-<p><a href="{% url 'password_reset' %}">Lost password?</a></p>
-
+				<!-- <input type="submit" value="Login">
+				<input type="hidden" name="next" value="{{ next }}"> -->
+				<div>
+					<button type="submit" class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+						<span class="absolute left-0 inset-y-0 flex items-center pl-3">
+							<!-- Heroicon name: solid/lock-closed -->
+							<svg class="h-5 w-5 text-indigo-500 group-hover:text-indigo-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+								<path fill-rule="evenodd" d="M5 9V7a5 5 0 0110 0v2a2 2 0 012 2v5a2 2 0 01-2 2H5a2 2 0 01-2-2v-5a2 2 0 012-2zm8-2v2H7V7a3 3 0 016 0z" clip-rule="evenodd" />
+							</svg>
+						</span>
+						Sign in
+					</button>
+				</div>
+			</form>
+			<div class="text-sm">
+				{# Assumes you setup the password_reset view in your URLconf #}
+				<p>
+					<a class="font-medium text-indigo-600 hover:text-indigo-500" href="{% url 'password_reset' %}">Lost password?</a>
+				</p>
+			</DIV>
+		</div>
+	</div>
+</div>
 {% endblock %}
